# unipept-database

./: .gitignore  LICENSE  README.md  configure  frequency.py  latest-config.1  make-on-hpc.sh  makefile.in  partial-index.sh  pom.xml  run.sh  run_profile.sh  script.exp
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
database/: headers.md  sample_data.sql  structure.sql  structure_no_index.sql  structure_no_index_compress.sql
docs/: build_steps_overview.afdesign
js_tools/: FilterByTaxa.js  FunctionalAnalysisPeptides.js  SplitFunctionalAnalysis.js  functional_analysis_parallel.sh
map-reduce-index/: map.pbs  reduce.sh
schemas/: headers.md  sample_data.sql  structure.sql  structure_constraints_only.sql  structure_index_only.sql  structure_no_index.sql  structure_no_index_compress.sql  structure_no_index_no_constraints.sql  user_data.sql
schemas_suffix_array/: headers.md  index_uniprot_entries.json  sample_data.sql  structure.sql  structure_index_only.sql  structure_no_index.sql
scripts/: build_binaries.sh  build_database.sh  general_helpers.sh  generate_sa_tables.sh  generate_tables_helper.sh  generate_umgap_tables.sh  index.sh  load.sh  (+5 more)
scripts/helper_scripts/new-parsers/: Cargo.toml  README.md
scripts/helper_scripts/new-parsers/src/: lib.rs
scripts/helper_scripts/new-parsers/src/calculate_lcas/: taxonomy.rs
scripts/helper_scripts/new-parsers/src/functional-analysis/: main.rs
scripts/helper_scripts/new-parsers/src/taxons-uniprots-tables/: main.rs  models.rs  tab_parser.rs  table_writer.rs  taxon_list.rs  utils.rs
scripts/helper_scripts/new-parsers/src/taxons_uniprots_tables/: mod.rs  models.rs  tab_parser.rs  table_writer.rs  taxon_list.rs  utils.rs
scripts/helper_scripts/new-parsers/src/utils/: files.rs
scripts/helper_scripts/new-parsers/src/xml-parser/: main.rs
scripts/helper_scripts/unipept-database-rs/: .gitignore  Cargo.toml  README.md  bench.sh
scripts/helper_scripts/unipept-database-rs/src/: lib.rs
scripts/helper_scripts/unipept-database-rs/src/calculate_lcas/: taxonomy.rs
scripts/helper_scripts/unipept-database-rs/src/dat_parser/: consumer.rs  entry.rs  mod.rs  producer.rs  sequential_parser.rs  threaded_parser.rs  uniprot-dat-format.md  utils.rs
scripts/helper_scripts/unipept-database-rs/src/taxons_lineages/: mod.rs  taxon_list.rs
scripts/helper_scripts/unipept-database-rs/src/taxons_uniprots_tables/: models.rs  tab_parser.rs  table_writer.rs  taxon_list.rs  utils.rs
scripts/helper_scripts/unipept-database-rs/src/uniprot/: mod.rs
scripts/helper_scripts/unipept-database-rs/src/utils/: files.rs
(+95 files in other folders)
