[package]
name = "unipept_database"
version = "0.1.0"
edition = "2021"
authors = ["unipept@ugent.be", "Stijn De Clercq", "Bart Mesuere", "Pieter Verschaffelt", "Tibo Vande Moortele"]
categories = ["command-line-utilities", "parser-implementations", "science"]
keywords = ["uniprot", "unipept", "metaproteomics"]
readme = "README.md"
repository = "https://github.com/unipept/unipept-database"
homepage = "https://unipept.ugent.be/"
license = "MIT"

[dependencies]
anyhow = "1.0.75"
bit-vec = "0.6.3"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
crossbeam-channel = "0.5.11"
regex = "1.10.6"
smartstring = { version = "1.0" }
strum = "0.25.0"
strum_macros = "0.25.3"
uniprot = "0.7.0"
lazy_static = "1.4.0"
num_cpus = "1.16.0"
